fix: #content 내 taxonomy-list의 row-gap을 0으로 수정

--- a/themes/enchanted-lowkey/assets/css/tailwind.css
+++ b/themes/enchanted-lowkey/assets/css/tailwind.css
@@ -355,7 +355,7 @@
   }
 
   #content .taxonomy-list {
-    @apply flex flex-row flex-wrap gap-x-2 gap-y-6 list-none ml-0;
+    @apply flex flex-row flex-wrap gap-x-2 gap-y-0 list-none ml-0;
   }
 
   #content .taxonomy-list a {
